fixed alignment create account button

--- a/style.css
+++ b/style.css
@@ -86,7 +86,9 @@ p{
     margin: 0;
     padding-top: 10px;
 }
-
+.register{
+    padding-top: 20px;
+}
 span{
     font-weight: 600;
     color:rgba(15,118,110,255);
